start removing unused code
