# docs/swagger.json
@@ -4,104 +4,6 @@
         "contact": {}
     },
     "paths": {
-        "/configuration/build-image/{image_type}": {
-            "post": {
-                "description": "Starts building a docker image in a goroutine and just returns Accepted.",
-                "tags": [
-                    "configuration"
-                ],
-                "summary": "Build docker images",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Image type: ios-appium, android-appium",
-                        "name": "image_type",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "202": {
-                        "description": ""
-                    }
-                }
-            }
-        },
-        "/configuration/remove-image/{image_type}": {
-            "post": {
-                "description": "Removes the 'ios-appium' or 'android-appium' Docker image",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "configuration"
-                ],
-                "summary": "Remove 'ios-appium' or 'android-appium' image",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Image type: ios-appium, android-appium",
-                        "name": "image_type",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/main.JsonResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/main.JsonErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/configuration/update-config": {
-            "put": {
-                "description": "Updates one or multiple configuration values",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "configuration"
-                ],
-                "summary": "Update project Appium configuration",
-                "parameters": [
-                    {
-                        "description": "Update config",
-                        "name": "config",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/main.AppiumConfig"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/main.JsonResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/main.JsonErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/configuration/upload-wda": {
             "post": {
                 "description": "Uploads the provided *.ipa into the ./apps folder with the expected \"WebDriverAgent.ipa\" name",
@@ -123,147 +25,6 @@
                         "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/main.JsonErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/containers/{container_id}/logs": {
-            "get": {
-                "description": "Get logs of container by provided container ID",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "containers"
-                ],
-                "summary": "Get container logs",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Container ID",
-                        "name": "container_id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/main.JsonResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/main.JsonErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/containers/{container_id}/remove": {
-            "post": {
-                "description": "Removes container by provided container ID",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "containers"
-                ],
-                "summary": "Remove container",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Container ID",
-                        "name": "container_id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/main.JsonResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/main.JsonErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/containers/{container_id}/restart": {
-            "post": {
-                "description": "Restarts container by provided container ID",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "containers"
-                ],
-                "summary": "Restart container",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Container ID",
-                        "name": "container_id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/main.JsonResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/main.JsonErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/device-logs/{log_type}/{device_udid}": {
-            "get": {
-                "description": "Get logs by type",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "device-logs"
-                ],
-                "summary": "Get logs for iOS device container",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Log Type",
-                        "name": "log_type",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Device UDID",
-                        "name": "device_udid",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/main.JsonResponse"
                         }
                     }
                 }
@@ -312,32 +73,6 @@
                 }
             }
         },
-        "/devices/device-control": {
-            "post": {
-                "description": "Provides the running containers, IOS devices info and apps available for installing",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "devices"
-                ],
-                "summary": "Get device control info",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/main.DeviceControlInfo"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/main.JsonErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/project-logs": {
             "get": {
                 "description": "Provides project logs as plain text response",
@@ -351,86 +86,9 @@
                     }
                 }
             }
-        },
-        "/refresh-device-containers": {
-            "post": {
-                "description": "Refreshes the device-containers data by returning an updated HTML table",
-                "produces": [
-                    "text/html"
-                ],
-                "summary": "Refresh the device-containers data",
-                "responses": {
-                    "200": {
-                        "description": ""
-                    },
-                    "500": {
-                        "description": ""
-                    }
-                }
-            }
         }
     },
     "definitions": {
-        "main.AndroidDevice": {
-            "type": "object",
-            "properties": {
-                "appium_port": {
-                    "type": "integer"
-                },
-                "device_image": {
-                    "type": "string"
-                },
-                "device_name": {
-                    "type": "string"
-                },
-                "device_os_version": {
-                    "type": "string"
-                },
-                "device_udid": {
-                    "type": "string"
-                },
-                "stream_port": {
-                    "type": "string"
-                },
-                "stream_size": {
-                    "type": "string"
-                }
-            }
-        },
-        "main.AndroidDeviceInfo": {
-            "type": "object",
-            "properties": {
-                "deviceConfig": {
-                    "$ref": "#/definitions/main.AndroidDevice"
-                },
-                "installedAppsBundleIDs": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                }
-            }
-        },
-        "main.AppiumConfig": {
-            "type": "object",
-            "properties": {
-                "devices_host": {
-                    "type": "string"
-                },
-                "selenium_hub_host": {
-                    "type": "string"
-                },
-                "selenium_hub_port": {
-                    "type": "string"
-                },
-                "selenium_hub_protocol_type": {
-                    "type": "string"
-                },
-                "wda_bundle_id": {
-                    "type": "string"
-                }
-            }
-        },
         "main.AvailableDevicesInfo": {
             "type": "object",
             "properties": {
@@ -477,90 +135,6 @@
                 },
                 "wda_port": {
                     "type": "string"
-                }
-            }
-        },
-        "main.DeviceControlInfo": {
-            "type": "object",
-            "properties": {
-                "android-devices-info": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/main.AndroidDeviceInfo"
-                    }
-                },
-                "installable-apps": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "ios-devices-info": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/main.IOSDeviceInfo"
-                    }
-                },
-                "running-containers": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                }
-            }
-        },
-        "main.IOSDevice": {
-            "type": "object",
-            "properties": {
-                "appium_port": {
-                    "type": "integer"
-                },
-                "container_server_port": {
-                    "type": "integer"
-                },
-                "device_image": {
-                    "type": "string"
-                },
-                "device_model": {
-                    "type": "string"
-                },
-                "device_name": {
-                    "type": "string"
-                },
-                "device_os_version": {
-                    "type": "string"
-                },
-                "device_udid": {
-                    "type": "string"
-                },
-                "screen_size": {
-                    "type": "string"
-                },
-                "wda_mjpeg_port": {
-                    "type": "integer"
-                },
-                "wda_port": {
-                    "type": "integer"
-                },
-                "wda_stream_url": {
-                    "type": "string"
-                },
-                "wda_url": {
-                    "type": "string"
-                }
-            }
-        },
-        "main.IOSDeviceInfo": {
-            "type": "object",
-            "properties": {
-                "deviceConfig": {
-                    "$ref": "#/definitions/main.IOSDevice"
-                },
-                "installedAppsBundleIDs": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
                 }
             }
         },
